--- a/transports/package.json
+++ b/transports/package.json
@@ -5,25 +5,21 @@
   "license": "MIT",
   "author": "vaebe",
   "type": "module",
-  "bin": {
-    "mcp-server-github": "dist/index.js"
-  },
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "build": "tsc && shx chmod +x dist/*.js",
     "prepare": "npm run build",
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.8.0",
+    "@modelcontextprotocol/sdk": "1.11.1",
     "dayjs": "^1.11.13",
-    "zod": "^3.22.4"
+    "express": "^5.1.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "shx": "^0.3.4",
-    "typescript": "^5.6.2"
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.17",
+    "shx": "^0.4.0",
+    "typescript": "^5.8.3"
   }
 }
