--- a/transports/package.json
+++ b/transports/package.json
@@ -14,6 +14,7 @@
     "@modelcontextprotocol/sdk": "1.11.1",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
+    "picocolors": "^1.1.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
