--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.11.1"
+    "@modelcontextprotocol/sdk": "1.11.1",
+     "dayjs": "^1.11.13",
+    "picocolors": "^1.1.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
